# systemc-event-channel

./: CMakeLists.txt  README.md  event.cpp  event.hpp  event_if.hpp  main.cpp  sc_time_literals.hpp  top.cpp  top.hpp
cmake/: sc-project_defaults.cmake
